name:                generics-lift
version:             0.1.0.0
synopsis:            GHC Generics for deriving numeric typeclasses, Monoid, and other similar classes.
-- description:
homepage:            https://github.com/mstksg/generics-lift#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GHC.Generics.Lift
                     , Numeric.Generic
                     , Data.Monoid.Generic
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite generics-lift-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , generics-lift
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/generics-lift
