name:                generics-lift
version:             0.1.0.0
synopsis:            GHC Generics for deriving numeric typeclasses, Monoid, and other similar classes.
description:         See README.md (or read online at <https://github.com/mstksg/generics-lift#readme>)
homepage:            https://github.com/mstksg/generics-lift#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2018
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GHC.Generics.Lift
                     , Numeric.Generics
                     , Data.Monoid.Generics
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/mstksg/generics-lift
